// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`use props base react 1`] = `
"export default (props) => {
  const { foo, bar } = props;
  return (
    <button>
      Clicked {foo} {bar === 1 ? "time" : "times"}
    </button>
  );
};
"
`;

exports[`use props base solid 1`] = `
"import { splitProps as _splitProps } from "solid-js";
export default (props) => {
  const [_local_, rest] = _splitProps(props, ["foo", "bar"]);

  return (
    <button {...rest}>
      Clicked {_local_.foo} {_local_.bar === 1 ? "time" : "times"}
    </button>
  );
};
"
`;

exports[`use props base vue 1`] = `
"import { toRefs as _toRefs } from "vue";
export default (props) => {
  const { foo, bar } = _toRefs(props);

  return (
    <button>
      Clicked {foo.value} {bar.value === 1 ? "time" : "times"}
    </button>
  );
};
"
`;

exports[`use props solid merge props 1`] = `
"import { mergeProps as _mergeProps } from "solid-js";
import { splitProps as _splitProps } from "solid-js";
export default (props) => {
  const [_local_, rest] = _splitProps(
    _mergeProps(
      {
        foo: "1",
      },
      props
    ),
    ["foo", "bar"]
  );

  return (
    <button {...rest}>
      Clicked {_local_.foo} {_local_.bar === 1 ? "time" : "times"}
    </button>
  );
};
"
`;
